--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "axios": "^1.6.5",
+    "formik": "^2.4.5",
     "next": "14.0.4",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
